--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bank.cs" />
+    <Compile Include="MechanizmOdsetkowy.cs" />
+    <Compile Include="MechanizmOdsetkowyC.cs" />
+    <Compile Include="MechanizmOdsetkowyB.cs" />
+    <Compile Include="MechanizmOdsetkowyA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rachunek.cs" />
