--- a/Bank/Bank.csproj
+++ b/Bank/Bank.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bank.cs" />
+    <Compile Include="KIR.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Przelew.cs" />
     <Compile Include="Rachunek.cs" />
   </ItemGroup>
   <ItemGroup>
